force-app/main/default/objects/Partner_Application__c/Partner_Application__c.object-meta.xml
<CustomObject>
    <label>Partner Application</label>
    <nameField>
        <label>Partner Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>