force-app/main/default/objects/Partner_Application__c/fields/Active_Company_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Company_Key__c</fullName>
    <description
  >Normalized company key used to prevent concurrent active applications for the same company.</description>
    <label>Active Company Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>