force-app/main/default/objects/Partner_Application__c/fields/Active_Email_Key__c.field-meta.xml
<CustomField>
    <fullName>Active_Email_Key__c</fullName>
    <description
  >Normalized email key used to prevent concurrent active applications for the same business email.</description>
    <label>Active Email Key</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>