force-app/main/default/objects/Partner_Application__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <displayFormat>PA-{000000}</displayFormat>
    <label>Application Number</label>
    <type>AutoNumber</type>
</CustomField>