force-app/main/default/objects/Partner_Application__c/fields/Approval_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notes__c</fullName>
    <description
  >Reviewer notes captured during application approval.</description>
    <label>Approval Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>