force-app/main/default/objects/Partner_Application__c/fields/Assigned_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Partner_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>