force-app/main/default/objects/Partner_Application__c/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <description
  >Business email address for the partner application.</description>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>