force-app/main/default/objects/Partner_Application__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <description
  >Company name submitted on the partner application.</description>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>