force-app/main/default/objects/Partner_Application__c/fields/Created_Account__c.field-meta.xml
<CustomField>
    <fullName>Created_Account__c</fullName>
    <label>Created Account</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Account</referenceTo>
    <relationshipName>Created_Partner_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>