force-app/main/default/objects/Partner_Application__c/fields/Created_Contact__c.field-meta.xml
<CustomField>
    <fullName>Created_Contact__c</fullName>
    <label>Created Contact</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Created_Partner_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>