force-app/main/default/objects/Partner_Application__c/fields/Decision_By__c.field-meta.xml
<CustomField>
    <fullName>Decision_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Decision By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Decided_Partner_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>