force-app/main/default/objects/Partner_Application__c/fields/Decision_On__c.field-meta.xml
<CustomField>
    <fullName>Decision_On__c</fullName>
    <label>Decision On</label>
    <type>DateTime</type>
</CustomField>