force-app/main/default/objects/Partner_Application__c/fields/Duplicate_Check_Key__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Key__c</fullName>
    <label>Duplicate Check Key</label>
    <externalId>true</externalId>
    <length>255</length>
    <type>Text</type>
</CustomField>