force-app/main/default/objects/Partner_Application__c/fields/Normalized_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Company_Name__c</fullName>
    <label>Normalized Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>