force-app/main/default/objects/Partner_Application__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number for the partner applicant.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>