force-app/main/default/objects/Partner_Application__c/fields/Provisioned_On__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_On__c</fullName>
    <label>Provisioned On</label>
    <type>DateTime</type>
</CustomField>