force-app/main/default/objects/Partner_Application__c/fields/Provisioned_User__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provisioned User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Provisioned_Partner_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>