force-app/main/default/objects/Partner_Application__c/fields/Provisioning_Error__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Error__c</fullName>
    <label>Provisioning Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>