force-app/main/default/objects/Partner_Application__c/fields/Provisioning_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Job_Id__c</fullName>
    <description
  >Salesforce AsyncApexJob ID for the current partner user provisioning request.</description>
    <label>Provisioning Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>