force-app/main/default/objects/Partner_Application__c/fields/Provisioning_Started_On__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Started_On__c</fullName>
    <description
  >Time at which the current partner user provisioning request was queued.</description>
    <label>Provisioning Started On</label>
    <type>DateTime</type>
</CustomField>