force-app/main/default/objects/Partner_Application__c/fields/Provisioning_Status__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Status__c</fullName>
    <label>Provisioning Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Awaiting Partner Enablement</fullName><default
        >false</default><label>Awaiting Partner Enablement</label></value>
            <value><fullName>Queued</fullName><default>false</default><label
        >Queued</label></value>
            <value><fullName>Complete</fullName><default>false</default><label
        >Complete</label></value>
            <value><fullName>Failed</fullName><default>false</default><label
        >Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>