force-app/main/default/objects/Partner_Application__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Region where the prospective partner operates.</description>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>