force-app/main/default/objects/Partner_Application__c/fields/Requested_Tier__c.field-meta.xml
<CustomField>
    <fullName>Requested_Tier__c</fullName>
    <description>Partner tier requested by the applicant.</description>
    <label>Requested Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>