force-app/main/default/objects/Partner_Application__c/fields/Submitted_By_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Contact_Name__c</fullName>
    <description
  >Name of the person who submitted the partner application.</description>
    <label>Submitted By Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>