force-app/main/default/objects/Partner_Application__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Website for the prospective partner company.</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>